Web Dev study guide

--- a/public/static/study-guides/prog2-term3.html
+++ b/public/static/study-guides/prog2-term3.html
@@ -6,47 +6,11 @@
   <meta name="author" content="David Buckley">
   <link rel="shortcut icon" href="../favicon.ico">
   <title>Term 3 Study Guide</title>
-
-  <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/starter-template/">
-
-  <!-- Bootstrap core CSS -->
-  <link href="https://getbootstrap.com/docs/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <style>
-    code {
-      color: #0A3 !important;
-      font-weight: 600;
-    }
-
-    .navbar,
-    .home-link {
-      font-family: 'Anonymous Pro', monospace;
-    }
-
-    .home-link, .home-link:hover, .home-link:visited, .home-link:active {
-      color: #FFF;
-      text-decoration: none;
-      margin-right: 1em;
-    }
-    
-    .site-main {
-      margin-top: 70px;
-    }
-
-    .jumptarget::before {
-      content:"";
-      display:block;
-      height: 70px; /* fixed header height*/
-      margin: -70px 0 0; /* negative fixed header height */
-    }
-    
-    h2 {
-      margin: 0.5em 0;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="home-link" href="http://meritacademy.tech/">meritacademy.tech</a>
+    <a class="home-link" href="https://meritacademy.tech/">meritacademy.tech</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
