Programming 1 study guide

--- a/public/static/study-guides/web-dev-final.html
+++ b/public/static/study-guides/web-dev-final.html
@@ -215,7 +215,8 @@
                 <td>a</td>
                 <td>Anchor tag, used for hyperlinks <br> 
                   <code>href="index.html"</code> Used for internal links <br>
-                  <code>href="https://example.com"</code> Used for external links
+                  <code>href="https://example.com"</code> Used for external links <br>
+                  <code>target="_blank"</code> Opens in a new tab
                 </td>
               </tr>
               <tr>
@@ -378,9 +379,9 @@
             </thead>
             <tbody>
               <tr>
-                <td>Selector</td>
-                <td><pre><code>body {
-  font-family: Arial, sans-serif;
+                <td>Anatomy of a CSS rule</td>
+                <td><pre><code>selector {
+  property: value;                  
 }</code></pre></td>
               </tr>
               <tr>
