Revert "Typo fixed"
This reverts commit ae7fcd0bf3ff6477044872a1faa5c07085a4daab.

--- a/public/static/study-guides/web-dev-final.html
+++ b/public/static/study-guides/web-dev-final.html
@@ -71,7 +71,7 @@
                 <td>Special computers on the internet that host websites.</td>
               </tr>
               <tr>
-                <td>Browser</td>
+                <td>Broswer</td>
                 <td>A program (like Google Chrome) that accesses files on the internet from web servers and displays them in a human-readable form.</td>
               </tr>
               <tr>
